--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.50.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1"
   },
